tests/test63.rael.exp
Error [1:1]: Division by zero
| 7 / 0
| ^
